# x3789

./: .gitignore  .travis.yml  CMakeLists.txt  Game.sln  gitignore
Common/: X3789_MACRO_VIEWER.h
Debug/Shaders/: SimpleVertexShader.vertexshader
Game/: DrawGroup.cpp  DrawGroup.h  Game.cpp  Game.vcxproj  Game.vcxproj.filters  GameMainHeader.h  LibraryLoader.cpp  LibraryLoader.h  OpenGL3Initializer.cpp  OpenGL3Initializer.h  VertexAttrib.cpp  VertexAttrib.h  stdafx.h
Game/Common/: ControlInterface.cpp  ControlInterface.h  ShaderLoader.cpp  ShaderLoader.h  TextureBMP.cpp  TextureBMP.h  TextureStorage.cpp  TextureStorage.h
Game/Common/Shaders/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
Game/Shaders/: GeometryCube.gs  GeometryCube.ps  GeometryCube.vs  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  TexturePixelShader.pixelshader  TextureVertexShader.vertexshader
SandBox/: Cube.cpp  Cube.h  CubeStruct.cpp  CubeStruct.h  DataTypes.h  ReadMe.txt  SandBox.vcxproj  SandBox.vcxproj.filters  SandBoxCommonHeader.h  dllmain.cpp  stdafx.cpp  stdafx.h
X3789_Engine/: CMakeLists.txt  Drawer.h  OpenGL3Initializer.cpp  OpenGL3Initializer.h  ReadMe.txt  ScreenDrawer.h  ShaderInterface.cpp  ShaderInterface.h  VAOTestClass.cpp  VAOTestClass.h  VBOTestClass.cpp  VBOTestClass.h  Vertex.cpp  Vertex.h  VertexCollector.h  VertexQueue.cpp  VertexQueue.h  VerticesList.cpp  VerticesList.h  WindowHolder.cpp  WindowHolder.h  WindowInterface.cpp  WindowInterface.h  X3789_Engine.cpp  X3789_Engine.h  X3789_Engine.vcxproj  X3789_Engine.vcxproj.filters  X3789_Engine_Common.h  XScopedThread.h  XThreadSafeQueue.h  dllmain.cpp  stdafx.cpp  stdafx.h  vertexcollector.cpp  vertexcollector.h
X3789_Engine/Common/: ControlInterface.cpp  ControlInterface.h  TextureBMP.cpp  TextureBMP.h  TextureStorage.cpp  TextureStorage.h
X3789_Engine/Common/Math/: Matrices.cpp  Matrices.h
X3789_Engine/Containers/: Chunk.cpp  CubeHolder.cpp  CubeHolder.h
X3789_Engine/Elements/: construction.cpp  construction.h
X3789_Engine/Object3D/: Object3D.cpp  Object3D.h  Object3DDrawer.cpp  Object3DDrawer.h  UniformCreator.cpp  UniformCreator.h  UniformStorage.cpp  UniformStorage.h  VertexStorage.cpp  VertexStorage.h
X3789_Engine/Object3D/Primitives/: Cube.cpp  Cube.h
X3789_Engine/Shaders/: ShaderLoader.cpp  ShaderLoader.h
X3789_Engine/System/: xargumentlist.cpp  xargumentlist.h  xthreadtask.cpp  xthreadtask.h
X3789_Engine/Tools/: Singleton.h
XEngine/: XEngine.vcxproj
XMath/: Matrix1D.h  Matrix1D.inl  Matrix2D.h  Matrix2D.inl  Matrix3D.h  Matrix3D.inl  Vector.h  Vector.inl  XMath.h  XMath.vcxproj  XMath.vcxproj.filters  XMathDataTypes.h
external_files/: glew32.lib
external_files/Shaders/: HUDVertexShader.vertexshader  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  TexturePixelShader.pixelshader
lib/: glew32s.lib  glfw3dll.lib
